style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

ul {
  list-style: none;
}

a {
  text-decoration: none;
  cursor: pointer;
    color: darkslategrey;
}

body {
  font-family:Arial, Helvetica, sans-serif;
  font-size: 16px;
  color: darkslategrey;
  background-color: rgb(235, 237, 240);
}

.wrapper {
  max-width: 1440px;
  margin: 0 auto;
  padding: 0 60px;
}

.header {
  margin-block: 2em 3em;
}

.d-flex {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 16px;
}

.nav-list {
  gap: 32px;
  font-size: 2em;
  font-weight: 600;
}

.hero {
  position: relative;
}

.hero__content {
  flex-wrap: wrap;
  justify-content: center;
  gap: 2em;
  align-items: flex-start;
  color: aliceblue;
  position: absolute;
  padding: 1em;
  width: 100%;
  backdrop-filter: blur(12px);
  background-image: linear-gradient(to right, rgba(0,0,0,0.5), rgba(0,0,0,0.2));

  font-size: 1.5em;
  letter-spacing: 0.08em;
  font-weight: 500;

}

h1 {
  color: #415ca8;
  font-size: 42px;
  margin-block: 1.5em;
  max-width: 100%;
  text-align: center;
}

.hero img {
  width: 100%;
  height: 100%;
}
.hero__content p {
  max-width: 20em;
}

.copyright {
  justify-content: center;
  font-weight: 600;
  font-size: 24px;
  padding-block: 1.5em;

}

